src/sass/_base.scss
/* ... */
body {
  --font-size: #{$text-sm};

  @media (min-width: $breakpoint) {
    --font-size: #{$text-2xl};
  }

  font-family: $font-family;
  font-size: var(--font-size);

  line-height: $line-height-basic;

  color: var(--light-text);
}

main > * {
  padding: 32px 28px;

  background-color: var(--light-bg);
}

// todo: change selector
main > :nth-child(odd) {
  --light-text: #{$color-secondary-300};
  --dark-text: #{$color-primary-0};

  // todo: think if it's better to set bg color on children elements and then change the global prop here
  background-color: var(--dark-bg);
}

img {
  max-width: 100%;
}

.heading-primary {
  --font-size: #{$text-4xl};

  @media (min-width: $breakpoint) {
    --font-size: #{$text-6xl};
  }

  font-size: var(--font-size);
  color: var(--dark-text);
  font-weight: $text-bold;
}
.heading-secondary {
  --font-size: #{$text-2xl};

  @media (min-width: $breakpoint) {
    --font-size: #{$text-5xl};
  }

  font-size: var(--font-size);
  color: var(--dark-text);
  font-weight: $text-bold;
}
.heading-tertiary {
  --font-size: #{$text-xs};

  @media (min-width: $breakpoint) {
    --font-size: #{$text-xl};
  }

  font-size: var(--font-size);
  font-weight: $text-semibold;
  color: $color-primary-500;
  text-transform: uppercase;
}

.how-it-works {
  --max-width: 235px;
  --title-text-size: #{$text-sm};

  @media (min-width: $breakpoint) {
    --max-width: 200px;
    --title-text-size: #{$text-xl};
  }

  //* temporary
  margin-left: 100px;
  margin-top: 100px;

  position: relative;

  display: flex;
  flex-direction: column;
  align-items: center;
  gap: $spacing-4xl;

  max-width: var(--max-width);

  &__title {
    font-size: var(--title-font-size);
    font-weight: $text-medium;
    text-align: center;
    color: $color-primary-0;
  }
  &__image {
    order: -1;
  }
  &__number {
    @include circle(48px);
    @include center-flex;

    position: absolute;
    top: 0;
    left: 0;

    font-weight: $text-semibold;
    font-size: $spacing-4xl;

    outline: 6px solid $color-secondary-700;
    background-color: $color-primary-500;
    color: $color-primary-0;

    transform: translate(-50%, -50%);
  }
}

.benefit {
  --title-font-size: #{$text-lg};
  --description-font-size: #{$text-xs};

  @media (min-width: $breakpoint) {
    --title-font-size: #{$text-2xl};
    --description-font-size: #{$text-base};
  }

  display: flex;
  flex-direction: column;
  max-width: 384px;

  &__title {
    font-size: var(--title-font-size);
    font-weight: $text-semibold;
    margin-bottom: $spacing-md;
  }
  &__description {
    font-size: var(--description-font-size);
  }
  &__image {
    order: -1;
    margin-bottom: $spacing-4xl;
  }
}

.pricing-plan {
  --pricingPlan-padding: #{$spacing-4xl};
  --pricingPlan-border-radius: 10px;
  --title-gap: #{$spacing-sm};
  --titleIcon-size: 24px;
  --titleText-font-size: #{$text-2xl};
  --description-font-size: #{$text-sm};
  --amount-font-size: #{$text-3xl};
  --period-font-size: #{$text-sm};
  --details-font-size: #{$text-sm};
  --details-margin-bottom: #{$spacing-4xl};
  --feature-icon-size: 20px;
  --feature-font-size: #{$text-sm};
  --feature-margin-bottom: #{$spacing-2xl};

  @media (min-width: $breakpoint) {
    --pricingPlan-padding: #{$spacing-5xl};
    --pricingPlan-border-radius: 12px;
    --title-gap: #{$spacing-md};
    --titleIcon-size: 32px;
    --titleText-font-size: #{$text-3xl};
    --description-font-size: #{$text-base};
    --amount-font-size: #{$text-5xl};
    --period-font-size: #{$text-lg};
    --details-font-size: #{$text-base};
    --details-margin-bottom: #{$spacing-5xl};
    --feature-icon-size: 24px;
    --feature-font-size: #{$text-lg};
    --feature-margin-bottom: #{$spacing-4xl};
  }

  max-width: 384px;
  padding: var(--pricingPlan-padding);
  border-radius: var(--pricingPlan-border-radius);

  background-color: $color-secondary-100;

  &__title {
    display: flex;
    gap: var(--title-gap);
    align-items: center;

    margin-bottom: $spacing-md;

    &-icon {
      width: var(--titleIcon-size);
      height: var(--titleIcon-size);
      fill: $color-primary-500;
    }
    &-text {
      font-size: var(--titleText-font-size);
      font-weight: $text-semibold;
      color: $color-secondary-700;
    }
  }
  &__description {
    margin-bottom: $spacing-4xl;

    font-size: var(--description-font-size);
    color: $color-secondary-400;
  }

  &__price {
    margin-bottom: $spacing-4xl;
  }
  &__amount {
    font-size: var(--amount-font-size);
    font-weight: $text-semibold;
    color: $color-secondary-700;
  }
  &__period {
    font-size: var(--period-font-size);
    font-weight: $text-medium;
    color: $color-secondary-400;
  }

  &__details {
    margin-bottom: var(--details-margin-bottom);
    font-size: var(--details-font-size);
    color: $color-secondary-500;
  }

  &__features-list {
    margin-bottom: $spacing-6xl;

    font-size: var(--feature-font-size);
    font-weight: $text-medium;
    color: $color-secondary-700;
  }
  &__feature {
    display: flex;
    gap: $spacing-md;
    margin-bottom: var(--feature-margin-bottom);

    &::before {
      @include icon('../img/icon/tick-circle.svg', var(--feature-icon-size));
    }

    &--disabled {
      color: $color-secondary-400;

      &::before {
        @include icon('../img/icon/close-circle.svg', var(--feature-icon-size));
      }
    }
  }

  &__button {
    width: 100%;
  }
}
/* ... */

